@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: September 7, 2008</p>
+      <p>Last Updated: September 8, 2008</p>
     </td>
   </tr>
 </table>
@@ -1117,6 +1117,8 @@ nuttx-0.3.14 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Fixed several critical bugs with regard to fat reading and writing and FAT12
 	  accesses.  Basically the FAT FS only worked with my tiny test files and test
 	  cases.  A lot of stronger FAT tested is needed!!
+	* Fixed another FAT bug in implementation of FAT lseek; this prohibit correct
+	  random access to large files.
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
